--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "gulp": "^3.9.1",
     "level": "^1.7.0",
     "leveldown": "^1.7.2",
     "levelup": "^1.3.8",
+    "materialize-css": "^0.99.0",
     "morgan": "^1.8.2",
     "morgan-json": "^1.1.0",
     "random-number": "0.0.7"
+  },
+  "devDependencies": {
+    "gulp-sass": "^3.1.0"
   }
 }
